<resources>
    <string name="app_name">FindMyFriends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_login_group">Groups</string>
    <string name="sign_up">\nSign Up For FindMyFriends</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="firstNameField">First Name</string>
    <string name="lastNameField">Last Name</string>
    <string name="newGroupNameField">insert group name</string>
    <string name="emailField">Email</string>
    <string name="usernameField">Username</string>
    <string name="passwordField">Password</string>
    <string name="birthdayField">Birthday</string>
    <string name="maleButton">Male</string>
    <string name="femaleButton">Female</string>
    <string name="signUpButton">Sign up</string>
    <string name="addGroupButton">add group</string>
    <string name="facebook_app_id">412942522220397</string>
    <string name="title_activity_create_new_group">CreateNewGroupActivity</string>
    <string name="logout">Log out</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="phone_verification_subtitle">\n\nVerify Your Phone Number</string>
    <string name="phone_verification_body">\n\nFindMyFriends will send you one SMS message to verify your phone number. To verify yourself, please enter your phone number\n\n</string>
    <string name="phone_verification_verify_body">\n\nPlease enter the verification code you got for FindMyFriends\n\n</string>
    <string name="title_activity_phone_verification_send">PhoneVerificationSend</string>
    <string name="error_field_not_empty">This field must not be empty</string>
    <string name="error_phone_num_invalid">This phone number is invalid</string>
    <string name="send_sms">Send SMS</string>
    <string name="verify">Verify my phone</string>
    <string name="title_activity_add_users_to_group">AddUsersToGroupActivity</string>
    <string name="title_activity_remove_users_from_group">RemoveUsersFromGroupActivity</string>
    <string name="title_activity_manage_users">ManageUsersActivity</string>
    <string name="title_manage_users">Manage Users</string>
    <string name="list_of_phones">List_item</string>
    <string name="addUsersButton">add users</string>
    <string name="removeUsersButton">remove users</string>

    <!-- Chat -->
    <string name="title">Chat Group</string>
    <string name="btn_send">Send</string>
    <string name="title_activity_chat_group">ChatGroupActivity</string>
</resources>
