<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_blue_light"
    tools:context="com.sadna.app.findmyfriends.activities.SignupActivity"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_sign_up"
        android:id="@+id/textView"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstNameText"
                android:maxLength="255"
                android:singleLine="true"
                android:textColor="@android:color/holo_orange_light"
                android:hint="@string/firstNameField" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastNameText"
                android:singleLine="true"
                android:maxLength="255"
                android:textColor="@android:color/holo_orange_light"
                android:hint="@string/lastNameField" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailText"
                android:maxLength="255"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/holo_orange_light"
                android:hint="@string/emailField" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userNameText"
                android:maxLength="30"
                android:singleLine="true"
                android:textColor="@android:color/holo_orange_light"
                android:hint="@string/usernameField" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordText"
                android:maxLength="30"
                android:singleLine="true"
                android:password="false"
                android:selectAllOnFocus="true"
                android:inputType="textPassword"
                android:textColor="@android:color/holo_orange_light"
                android:hint="@string/passwordField" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/birthdayText"
                android:hint="@string/birthdayField"
                android:editable="false"
                android:clickable="true"
                android:enabled="true"
                android:onClick="birthDatePicker"
                android:textColor="@android:color/holo_orange_light"
                android:focusableInTouchMode="false" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:id="@+id/genderGroup">

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maleButton"
                    android:id="@+id/maleButton"
                    android:layout_weight="1"
                    android:onClick="resetGenderErrors" />

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/femaleButton"
                    android:id="@+id/femaleButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:onClick="resetGenderErrors" />
            </RadioGroup>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUpButton"
                android:id="@+id/signUpButton"
                android:enabled="true"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/holo_orange_light"
                style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:onClick="attemptSignUp"
                android:clickable="true" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
