<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:touchscreenBlocksFocus="true"
    tools:context="com.sadna.app.findmyfriends.activities.ManageUsersActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elegantTextHeight="false"
        android:text="@string/title_manage_users"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/holo_orange_light"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/add_users_button"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:capitalize="sentences"
        android:clickable="true"
        android:elegantTextHeight="false"
        android:onClick="addUsers"
        android:singleLine="false"
        android:text="@string/addUsersButton"
        android:textColor="@color/holo_orange_light"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="230dp" />

    <Button
        android:id="@+id/remove_users_button"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:capitalize="sentences"
        android:clickable="true"
        android:elegantTextHeight="false"
        android:singleLine="false"
        android:text="@string/removeUsersButton"
        android:textColor="@color/holo_orange_light"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/add_users_button"
        android:layout_alignParentLeft="true"
        android:onClick="removeUsers" />

</RelativeLayout>
