<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background1"
    tools:context="com.sadna.app.findmyfriends.activities.PhoneVerificationSendActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/phone_verification"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/holo_orange_light"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/phone_verification_subtitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/holo_orange_light"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="top|center_horizontal"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/phone_verification_verify_body"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/holo_orange_light"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:typeface="sans" />

        <EditText
            android:id="@+id/verify_code_textbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="number"
            android:phoneNumber="false"
            android:maxLength="5"
            android:textColor="@color/holo_orange_light" />

        <Button
            android:id="@+id/verify_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:clickable="true"
            android:enabled="true"
            android:text="@string/verify"
            android:onClick="verifyPhone"
            android:layout_marginTop="20dp"
            android:textColor="@color/holo_orange_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/error_verify_wrong_code"
            android:id="@+id/textErrorViewVerify"
            android:visibility="invisible"
            android:textColor="@color/holo_red_light"
            android:textStyle="bold"
            android:layout_marginLeft="45dp" />

    </LinearLayout>

</RelativeLayout>
